scripts/nullaway/annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8.txt
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/SimpleCaptchaService.java:56: error: [NullAway] method returns @Nullable, but superclass method org.patchca.service.AbstractCaptchaService.getCaptcha() returns @NonNull
	public Captcha getCaptcha() {
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:35: error: [NullAway] @NonNull field colorFactory not initialized
	protected ColorFactory colorFactory;
	                       ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:109: error: [NullAway] dereferenced expression backgroundFactory is @Nullable
		backgroundFactory.fillBackground(bufImage);
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:110: error: [NullAway] dereferenced expression wordFactory is @Nullable
		String word = wordFactory.getNextWord();
		                         ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:111: error: [NullAway] dereferenced expression textRenderer is @Nullable
		textRenderer.draw(word, bufImage, fontFactory, colorFactory);
		            ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:112: error: [NullAway] dereferenced expression filterFactory is @Nullable
		bufImage = filterFactory.applyFilters(bufImage);
		                        ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/AbstractTextRenderer.java:83: error: [NullAway] dereferenced expression fontFactory is @Nullable
			Font font = fontFactory.getFont(i);
			                       ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/AbstractFilterFactory.java:32: error: [NullAway] enhanced-for expression getFilters() is @Nullable
		for (BufferedImageOp filter : getFilters()) {
		                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/DiffuseImageOp.java:30: error: [NullAway] initializer method does not guarantee @NonNull fields tx (line 26), ty (line 27) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DiffuseImageOp() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/MarbleImageOp.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields tx (line 27), ty (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MarbleImageOp() {
	       ^
    (see http://t.uber.com/nullaway )
10 errors
